--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,11 @@
-/* styles go here */
+.input-box {
+  margin-bottom: 20px;
+}
+
+.form-field {
+  margin-bottom: 10px;
+}
+
+.form-field:last-child {
+  margin-bottom: 0;
+}
